<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        app:titleTextColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/btns_buts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_interstitial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_interstitial_ad"
                android:textAllCaps="false"
                android:textColor="@color/gnt_white" />

            <Button
                android:id="@+id/btn_rewarded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_rewarded_ad"
                android:textAllCaps="false"
                android:textColor="@color/gnt_white" />

            <Button
                android:id="@+id/btn_native_ad_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_native_ad"
                android:textAllCaps="false"
                android:textColor="@color/gnt_white"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_select_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_choose_ad"
                android:textAllCaps="false"
                android:textColor="@color/gnt_white"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/native_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/btns_buts"/>

    <LinearLayout
        android:id="@+id/banner_ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

    </RelativeLayout>

</RelativeLayout>